// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders colored indicator 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    Object {
      "busy": true,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "height": 24,
        "opacity": 1,
        "width": 24,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 24,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 24,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 12,
              "overflow": "hidden",
              "width": 24,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "height": 24,
                "transform": Array [
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "-165deg",
                  },
                ],
                "width": 24,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 12,
                  "overflow": "hidden",
                  "width": 24,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "#FF0000",
                    "borderRadius": 12,
                    "borderWidth": 2.4,
                    "height": 24,
                    "width": 24,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 24,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 24,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 12,
              "overflow": "hidden",
              "top": 12,
              "width": 24,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "height": 24,
                "transform": Array [
                  Object {
                    "translateY": -12,
                  },
                  Object {
                    "rotate": "345deg",
                  },
                ],
                "width": 24,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 12,
                  "overflow": "hidden",
                  "width": 24,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "#FF0000",
                    "borderRadius": 12,
                    "borderWidth": 2.4,
                    "height": 24,
                    "width": 24,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders hidden indicator 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    Object {
      "busy": false,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "height": 24,
        "opacity": 0,
        "width": 24,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 24,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 24,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 12,
              "overflow": "hidden",
              "width": 24,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "height": 24,
                "transform": Array [
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "-165deg",
                  },
                ],
                "width": 24,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 12,
                  "overflow": "hidden",
                  "width": 24,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "rgba(103, 80, 164, 1)",
                    "borderRadius": 12,
                    "borderWidth": 2.4,
                    "height": 24,
                    "width": 24,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 24,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 24,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 12,
              "overflow": "hidden",
              "top": 12,
              "width": 24,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "height": 24,
                "transform": Array [
                  Object {
                    "translateY": -12,
                  },
                  Object {
                    "rotate": "345deg",
                  },
                ],
                "width": 24,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 12,
                  "overflow": "hidden",
                  "width": 24,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "rgba(103, 80, 164, 1)",
                    "borderRadius": 12,
                    "borderWidth": 2.4,
                    "height": 24,
                    "width": 24,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders indicator 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    Object {
      "busy": true,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "height": 24,
        "opacity": 1,
        "width": 24,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 24,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 24,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 12,
              "overflow": "hidden",
              "width": 24,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "height": 24,
                "transform": Array [
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "-165deg",
                  },
                ],
                "width": 24,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 12,
                  "overflow": "hidden",
                  "width": 24,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "rgba(103, 80, 164, 1)",
                    "borderRadius": 12,
                    "borderWidth": 2.4,
                    "height": 24,
                    "width": 24,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 24,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 24,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 12,
              "overflow": "hidden",
              "top": 12,
              "width": 24,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "height": 24,
                "transform": Array [
                  Object {
                    "translateY": -12,
                  },
                  Object {
                    "rotate": "345deg",
                  },
                ],
                "width": 24,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 12,
                  "overflow": "hidden",
                  "width": 24,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "rgba(103, 80, 164, 1)",
                    "borderRadius": 12,
                    "borderWidth": 2.4,
                    "height": 24,
                    "width": 24,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders large indicator 1`] = `
<View
  accessibilityRole="progressbar"
  accessibilityState={
    Object {
      "busy": true,
    }
  }
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "height": 48,
        "opacity": 1,
        "width": 48,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 48,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 48,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 24,
              "overflow": "hidden",
              "width": 48,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "height": 48,
                "transform": Array [
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "-165deg",
                  },
                ],
                "width": 48,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 24,
                  "overflow": "hidden",
                  "width": 48,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "rgba(103, 80, 164, 1)",
                    "borderRadius": 24,
                    "borderWidth": 4.8,
                    "height": 48,
                    "width": 48,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "height": 48,
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 48,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 24,
              "overflow": "hidden",
              "top": 24,
              "width": 48,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "height": 48,
                "transform": Array [
                  Object {
                    "translateY": -24,
                  },
                  Object {
                    "rotate": "345deg",
                  },
                ],
                "width": 48,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "height": 24,
                  "overflow": "hidden",
                  "width": 48,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "rgba(103, 80, 164, 1)",
                    "borderRadius": 24,
                    "borderWidth": 4.8,
                    "height": 48,
                    "width": 48,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
